trying to fix issue with nabar on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -55,7 +55,7 @@ html, body {
 
 .section {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   background-size: cover;
   display: flex;
   align-items: center;
